--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "0.0.0.0" # the base hostname & protocol for your site
+baseurl: "/blog" # the subpath of your site, e.g. /blog/
+url: "http://syhoung.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
@@ -27,7 +27,7 @@ theme_settings:
   flickr:
   github: "madebymunsters/type-theme"
   google_plus:
-  instagram: "joeykirk"
+  instagram: 
   linkedin:  # Full URL
   pinterest:
   reddit:
