--- a/_config.yml
+++ b/_config.yml
@@ -35,12 +35,12 @@ theme_settings:
   stack_exchange:  # Full URL
   steam:
   tumblr:
-  twitter: "joeykirk"
+  twitter: 
   wordpress:
   youtube:
 
   # Scripts
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: "UA-93394102-1"
   disqus_shortname:
   katex: true # Enable if using math markup
 
