--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://syhoung.github.io/"
+url: "https://syhoung1.github.io/"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
@@ -25,7 +25,7 @@ theme_settings:
   dribbble:
   facebook:
   flickr:
-  github: "madebymunsters/type-theme"
+  github: 
   google_plus:
   instagram: 
   linkedin:  # Full URL
